Bug 1741152 - Add diagnostic warnings to process launch codepaths, r=ipc-reviewers,mccr8

Differential Revision: https://phabricator.services.mozilla.com/D131419